--- a/.editorconfig
+++ b/.editorconfig
@@ -4,6 +4,10 @@ root = true
 indent_style = tab
 indent_size = 4
 
+[*.h]
+indent_style = tab
+indent_size = 4
+
 [*.asm]
 indent_style = tab
 indent_size = 4
